refactor(framework): clarify runtime boundaries and SQL templates